@@ -1,4 +1,8 @@
-﻿drkns 30.07.2014 21:07:46 +0200 - build 4030
+﻿drkns 31.07.2014 00:18:41 +0200 - build 4031
+
+1. Ещё немного Clang.
+
+drkns 30.07.2014 21:07:46 +0200 - build 4030
 
 1. Уточнение 4018.2.
 
